@@ -1,5 +1,8 @@
 2025-01-13  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el: Enable `ultra-scroll-mode' if xinput2 is available.
+	* packages.el: Add package `ultra-scroll'.
+
 	* init.el: Set font of default face.
 	(toggle-map): Bind `w' to `whitespace-mode'.
 	(server-after-make-frame-hook): Add `+custom-fontset'.
